--- a/StigmergyFigures.Rmd
+++ b/StigmergyFigures.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "StigmergyFigures"
 author: "Lauren White"
-date: "9/12/2019"
+date: "January 23, 2020"
 output: html_document
 ---
 
@@ -450,7 +450,7 @@ tiff("Fig5.tiff", height =22.23 , width =13, units = "cm", compression = "lzw", 
 multiplot(gg, hh, cols=1)
 dev.off()
 ```
-## Figure S3
+## S3 Figure 
 Heatmap duration for n.initial=100, dir_move=T, and recovery rate= 0.01
 
 ```{r}
@@ -490,7 +490,7 @@ hh<- hh + theme(legend.text = element_text(vjust=0.5, size=10), legend.title=ele
 hh<- hh + ggtitle("(B)")
 hh
 
-tiff("FigS3.tiff", height =22.23 , width =13, units = "cm", compression = "lzw", res = 600)
+tiff("S3Fig.tiff", height =22.23 , width =13, units = "cm", compression = "lzw", res = 600)
 multiplot(gg, hh, cols=1)
 dev.off()
 ```
@@ -541,7 +541,7 @@ multiplot(gg, hh, cols=1)
 dev.off()
 ```
 
-## Figure S5
+## S5 Figure
 Heatmap duration for n.initial=150, dir_move=T, and recovery rate= 0.05
 
 ```{r}
@@ -585,7 +585,7 @@ tiff("S5Fig.tiff", height =22.23 , width =13, units = "cm", compression = "lzw",
 multiplot(gg, hh, cols=1)
 dev.off()
 ```
-## S6 Fig 
+## S6 Figure 
 ```{r}
 sdf <- summaryBy(max_prevalence~ rec_rate+scent_load +pathogen_load +scent_decay + inf_decay +dir_move, data=sub_n100_dT_r0.05, FUN=mean)
 gg <- ggplot(sdf, aes(x=as.factor(pathogen_load), y=as.factor(scent_load), fill=max_prevalence.mean))
@@ -628,7 +628,7 @@ multiplot(gg, hh, cols=1)
 dev.off()
 ```
 
-## Figure S7
+## S7 Figure
 Heatmap duration for n.initial=150, dir_move=T, and recovery rate= 0.10
 ```{r}
 sdf <- summaryBy(max_prevalence~ rec_rate+scent_load +pathogen_load +scent_decay + inf_decay +dir_move, data=sub_n150_dT_r0.1, FUN=mean)
@@ -673,7 +673,7 @@ dev.off()
 ```
 
 
-## S8 Fig 
+## S8 Figure 
 ```{r}
 sdf <- summaryBy(max_prevalence~ rec_rate+scent_load +pathogen_load +scent_decay + inf_decay +dir_move, data=sub_n100_dT_r0.1, FUN=mean)
 gg <- ggplot(sdf, aes(x=as.factor(pathogen_load), y=as.factor(scent_load), fill=max_prevalence.mean))
@@ -848,7 +848,7 @@ dev.off()
 ```
 
 
-## Figure S11
+## S11 Figure
 ```{r}
 ii<- ggplot(data=sub_n100_dT_r0.01, aes(x=as.factor(inf_decay), y=max_prevalence, fill=as.factor(scent_decay)))
 # ii<- ii+ geom_boxplot() #+ geom_jitter(alpha=0.5)
@@ -891,7 +891,7 @@ dev.off()
 ```
 
 
-## Figure S12
+## S12 Figure 
 ```{r}
 ii<- ggplot(data=sub_n50_dT_r0.01, aes(x=as.factor(inf_decay), y=max_prevalence, fill=as.factor(scent_decay)))
 # ii<- ii+ geom_boxplot() #+ geom_jitter(alpha=0.5)
