--- a/StigmergyFigures.Rmd
+++ b/StigmergyFigures.Rmd
@@ -822,6 +822,7 @@ ii<- ii + theme(strip.text = element_text(vjust=0.5, size=11))
 ii<- ii + theme(legend.text = element_text(vjust=0.5, size=11), legend.title=element_text(vjust=0.5, size=11))
 ii<- ii + geom_vline(xintercept=c(6.5,12.5), linetype="dashed")
 ii<- ii + theme(plot.margin=unit(c(0.1,0.1,0,0.1), "cm"))
+ii<- ii + ggtitle("(A)")
 ii
 
 jj<- ggplot(data=lowhigh, aes(x=as.factor(inf_decay), y=duration, fill=as.factor(scent_decay)))
@@ -839,6 +840,7 @@ jj<- jj + theme(strip.text = element_text(vjust=0.5, size=11))
 jj<- jj + theme(legend.text = element_text(vjust=0.5, size=11), legend.title=element_text(vjust=0.5, size=11))
 jj<- jj + geom_vline(xintercept=c(6.5,12.5), linetype="dashed")
 jj<- jj + theme(plot.margin=unit(c(0.1,0.1,0,0.1), "cm"))
+jj<- jj + ggtitle("(B)")
 jj
 
 tiff("Fig6.tiff", height =22.23 , width =19.05, units = "cm", compression = "lzw", res = 600)
@@ -865,6 +867,7 @@ ii<- ii + theme(strip.text = element_text(vjust=0.5, size=11))
 ii<- ii + theme(legend.text = element_text(vjust=0.5, size=11), legend.title=element_text(vjust=0.5, size=11))
 ii<- ii + geom_vline(xintercept=c(6.5,12.5), linetype="dashed")
 ii<- ii + theme(plot.margin=unit(c(0.1,0.1,0,0.1), "cm"))
+ii<- ii + ggtitle("(A)")
 ii
 
 jj<- ggplot(data=sub_n100_dT_r0.01, aes(x=as.factor(inf_decay), y=duration, fill=as.factor(scent_decay)))
@@ -882,6 +885,7 @@ jj<- jj + theme(strip.text = element_text(vjust=0.5, size=11))
 jj<- jj + theme(legend.text = element_text(vjust=0.5, size=11), legend.title=element_text(vjust=0.5, size=11))
 jj<- jj + geom_vline(xintercept=c(6.5,12.5), linetype="dashed")
 jj<- jj + theme(plot.margin=unit(c(0.1,0.1,0,0.1), "cm"))
+jj<- jj + ggtitle("(B)")
 jj
 
 tiff("S11Fig.tiff", height =22.23 , width =19.05, units = "cm", compression = "lzw", res = 600)
@@ -908,6 +912,7 @@ ii<- ii + theme(strip.text = element_text(vjust=0.5, size=11))
 ii<- ii + theme(legend.text = element_text(vjust=0.5, size=11), legend.title=element_text(vjust=0.5, size=11))
 ii<- ii + geom_vline(xintercept=c(6.5,12.5), linetype="dashed")
 ii<- ii + theme(plot.margin=unit(c(0.1,0.1,0,0.1), "cm"))
+ii<- ii + ggtitle("(A)")
 ii
 
 jj<- ggplot(data=sub_n50_dT_r0.01, aes(x=as.factor(inf_decay), y=duration, fill=as.factor(scent_decay)))
@@ -925,6 +930,7 @@ jj<- jj + theme(strip.text = element_text(vjust=0.5, size=11))
 jj<- jj + theme(legend.text = element_text(vjust=0.5, size=11), legend.title=element_text(vjust=0.5, size=11))
 jj<- jj + geom_vline(xintercept=c(6.5,12.5), linetype="dashed")
 jj<- jj + theme(plot.margin=unit(c(0.1,0.1,0,0.1), "cm"))
+jj<- jj + ggtitle("(B)")
 jj
 
 tiff("S12Fig.tiff", height =22.23 , width =19.05, units = "cm", compression = "lzw", res = 600)
